# cargo-squatty

./: Cargo.toml  README.md
.github/workflow/: ci.yml
src/: main.rs
src/resources/: Cargo.toml.template
